--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Junaith Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
-    
-    
+    <section class="header-sec">
+        <div class="top-banner-1">
+            <h1>Welcome To</h1>
+            <h1><span class="title-name">Junaith's</span> World</h1>
+            <h3>A Passionate Web developer</h3>
+            <p>I am Junaith Bin Elias khan. Born in Chittagong, Bangladesh. Detail-orriented and focused. I love travelling in natural places like Cox'sBazar, saintmartin etc.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/junaith-bin-elias-khan-060ab3213/">HIRE ME</a>
+        </div>
+        <div class="top-banner-2">
+            <img src="images/junaith_1.png" alt="junaith">
+        </div>
+    </section>
 </body>
 </html>
