--- a/index.html
+++ b/index.html
@@ -20,7 +20,39 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/junaith-bin-elias-khan-060ab3213/">HIRE ME</a>
         </div>
         <div class="top-banner-2">
-            <img src="images/junaith_1.png" alt="junaith">
+            <img src="images/junaith_1.png" alt="junaith_1">
+        </div>
+    </section>
+    <section class="middle-sec">
+        <div class="middle-banner-1">
+            <img src="images/junaith_2.png" alt="junaith_2">
+        </div>
+        <div class="middle-banner-2">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I have learned basic HTML & CSS. I can build any simple website, and I want to learn more advance topics so that I can grow more and more.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/junaith-bin-elias-khan-060ab3213/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    
+    <section class="footer-sec">
+        <h1>Experiences</h1>
+        <div class="experience-item">
+            <div id="left-border-1" class="experience-area">
+                <h2>Full Stack Web Developer</h2>
+                <h3><span class="title-name">2022-present | Pro Level Developer</span></h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I
+                    didn't
+                    stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the
+                    deployment,
+                    server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="left-border-2" class="experience-area">
+                <h2>Baby Web Developer</h2>
+                <h3><span class="title-name">2020-2021 | Programming Hero Learner</span></h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them.
+                They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
 </body>
